--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: 'Casper McFadden'
 username: casper
 bio: 'A paranormal expert and his daughter bunk in an abandoned house populated by 3 mischievous ghosts and one friendly one.'
 location: 'Maine, USA'
-url: 'http://biomadeira.github.io/jasper/'
+url: 'AhmedIbrahimMohamed.github.io'
 image: 'assets/images/casper.png'
 
 short_url: 'biomadeira.github.io/jasper/'
