--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ location: 'Maine, USA'
 url: 'AhmedIbrahimMohamed.github.io'
 image: 'assets/images/casper.png'
 
-short_url: 'biomadeira.github.io/jasper/'
+short_url: 'AhmedIbrahimMohamed.github.io/jasper/'
 google_analytics: UA-69281367-1
 disqus: username
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
@@ -59,7 +59,7 @@ repo: jasper
 branch: master
 relative_source: ../jasper/
 destination: ../jasper-pages/
-production_url:  https://biomadeira.github.io/jasper/
+production_url:  AhmedIbrahimMohamed.github.io/jasper/
 source_url:      https://github.com/biomadeira/jasper/
 
 exclude:
